@@ -351,7 +351,7 @@ ignore_gui_open ()
 	}
 
 	ignorewin =
-			  mg_create_generic_tab ("ignorelist", _("X-Chat: Ignore list"),
+			  mg_create_generic_tab ("IgnoreList", _("X-Chat: Ignore list"),
 											FALSE, TRUE, close_ignore_gui_callback,
 											NULL, 600, 256, &vbox, 0);
 
