@@ -291,7 +291,7 @@ notify_opengui (void)
 	}
 
 	notify_window =
-		mg_create_generic_tab ("notify", _("X-Chat: Notify List"), FALSE, TRUE,
+		mg_create_generic_tab ("Notify", _("X-Chat: Notify List"), FALSE, TRUE,
 		                       notify_closegui, NULL, 400, 250, &vbox, 0);
 
 	view = notify_treeview_new (vbox);
