@@ -835,3 +835,7 @@ void fe_menu_update (menu_entry *me)
 void fe_uselect (struct session *sess, char *word[], int do_clear, int scroll_to)
 {
 }
+void
+fe_server_event (server *serv, int type, int arg)
+{
+}
