@@ -33,6 +33,7 @@ Where "NUMBER" is the bug number.
  - The lag and throttle metres now have tooltips that give you real
    information.
  - Added workaround to show on-join ChanServ notices in the right tab.
+ - Tab scroll buttons are now side-by-side when in vertical mode.
  - 
  - 
 
